--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="image-gallery">  
           <div class="div-fig1">
           <figure class="fig1">
-            <img src="../images/download (1).jfif" alt="Economy Car" title="Economy Car" width="300px" height="250px">  
+            <img src="download (1).jfif" alt="Economy Car" title="Economy Car" width="300px" height="250px">  
             <figcaption>
               <details>
           <label for="">name:Economy Car</label>
@@ -200,7 +200,7 @@
             </figcaption>
           </figure>
           <figure class="fig1">
-            <img src="../images/download (2).jfif"alt="SUV" title="SUV" width="300px" height="250px">  
+            <img src="download (2).jfif"alt="SUV" title="SUV" width="300px" height="250px">  
             <figcaption>
               <details>
                 <label for="">name:SUV</label>
@@ -220,7 +220,7 @@
             </figcaption>
           </figure>
           <figure class="fig1">
-            <img src="../images/download (3).jfif" alt="Luxury Car" title="Luxury Car" width="300px" height="250px">
+            <img src="download (3).jfif" alt="Luxury Car" title="Luxury Car" width="300px" height="250px">
             <figcaption>
               <details>
                 <label for="">name:Luxury Car</label>   
@@ -240,7 +240,7 @@
             </figcaption>
           </figure>
           <figure class="fig1">
-            <img src="../images/download (4).jfif" alt="Van" title="Van" width="300px" height="250px">
+            <img src="download (4).jfif" alt="Van" title="Van" width="300px" height="250px">
             <figcaption>
               <details>
                 <label for="">name:Van</label> 
@@ -262,7 +262,7 @@
         </div>
         <div class="div-fig2">
           <figure class="fig2">
-            <img src="../images/download (5).jfif" alt="Truck" title="Truck" width="300px" height="250px"> 
+            <img src="download (5).jfif" alt="Truck" title="Truck" width="300px" height="250px"> 
             <figcaption>
               <details>
                 <label for="">name:Truck</label> 
@@ -282,7 +282,7 @@
             </figcaption>
           </figure>
           <figure class="fig2">
-            <img src="../images/download (6).jfif" alt="Hybrid Car" title="Hybrid Car" width="300px" height="250px"> 
+            <img src="download (6).jfif" alt="Hybrid Car" title="Hybrid Car" width="300px" height="250px"> 
             <figcaption>
               <details>
                 <label for="">name:Hybrid Car</label>    
@@ -304,7 +304,7 @@
 
              
             <figure class="fig2">
-              <img src="../images/download (7).jfif" alt="" width="300px" height="250px">
+              <img src="download (7).jfif" alt="" width="300px" height="250px">
               <figcaption>
                 <details>
                   <label for="">name:Hybrid Car</label>
@@ -484,6 +484,6 @@
     <button id="back-to-top">Back to Top</button>
   </footer>
 
-  <script src="../js/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
